--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,10 +51,11 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1 class="mt-5 text-center">Car Information Checklist</h1>
-        
+
         <form class="mt-4">
             <!-- Year -->
             <div class="mb-3">
@@ -175,12 +177,259 @@
 
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="suspension">
-                <label class="form-check-label" for="suspension">Suspension (tie rods, ball joints, shocks, axle, etc)</label>
+                <label class="form-check-label" for="suspension">Suspension (tie rods, ball joints, shocks, axle,
+                    etc)</label>
             </div>
 
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="frame-damage">
                 <label class="form-check-label" for="frame-damage">Frame Damage (from collision)</label>
+            </div>
+
+            <!-- Additional Checklist Items - Questions for the Owner -->
+            <h2>Questions for the Owner</h2>
+
+            <!-- Question 1: How long have you owned the car? -->
+            <div class="mb-3">
+                <label for="ownership-duration" class="form-label">1. How long have you owned the car?</label>
+                <input type="text" class="form-control" id="ownership-duration"
+                    placeholder="Enter the ownership duration">
+            </div>
+
+            <!-- Question 2: Why are you selling it? -->
+            <div class="mb-3">
+                <label for="reason-for-selling" class="form-label">2. Why are you selling it?</label>
+                <input type="text" class="form-control" id="reason-for-selling"
+                    placeholder="Enter the reason for selling">
+            </div>
+
+            <!-- Question 3: Does everything work/any problems? -->
+            <div class="mb-3">
+                <label for="car-condition" class="form-label">3. Does everything work/any problems?</label>
+                <input type="text" class="form-control" id="car-condition" placeholder="Describe the car's condition">
+            </div>
+
+            <!-- Question 4: Any service records, what have you done since owning the car? -->
+            <div class="mb-3">
+                <label for="service-records" class="form-label">4. Any service records, what have you done since owning
+                    the car?</label>
+                <input type="text" class="form-control" id="service-records" placeholder="Describe the service history">
+            </div>
+
+            <!-- Question 5: What did you use the car for? -->
+            <div class="mb-3">
+                <label for="car-usage" class="form-label">5. What did you use the car for?</label>
+                <input type="text" class="form-control" id="car-usage" placeholder="Describe how you used the car">
+            </div>
+
+            <!-- Question 6: How many miles did you put on it when you owned it? -->
+            <div class="mb-3">
+                <label for="miles-driven" class="form-label">6. How many miles did you put on it when you owned
+                    it?</label>
+                <input type="text" class="form-control" id="miles-driven" placeholder="Enter the miles driven">
+            </div>
+
+            <!-- Question 7: What car are you looking to get now? Why? -->
+            <div class="mb-3">
+                <label for="next-car" class="form-label">7. What car are you looking to get now? Why?</label>
+                <input type="text" class="form-control" id="next-car"
+                    placeholder="Describe the next car you're interested in">
+            </div>
+
+            <!-- Additional Checklist Items - Things to Bring -->
+            <h2>Things to Bring</h2>
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="obdii-scanner">
+                <label class="form-check-label" for="obdii-scanner">OBDII Scanner</label>
+            </div>
+
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="magnet">
+                <label class="form-check-label" for="magnet">Magnet</label>
+            </div>
+
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="flashlight">
+                <label class="form-check-label" for="flashlight">Flashlight</label>
+            </div>
+
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="paper-towel">
+                <label class="form-check-label" for="paper-towel">Paper Towel</label>
+            </div>
+
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="pen">
+                <label class="form-check-label" for="pen">Pen</label>
+            </div>
+            <!-- Additional Checklist Items - From your Research -->
+            <h2>From your Research</h2>
+
+            <!-- Value of the Car (trade-in value) -->
+            <div class="mb-3">
+                <label for="car-value" class="form-label">Value of the Car (trade-in value):</label>
+                <input type="text" class="form-control" id="car-value"
+                    placeholder="Enter the trade-in value of the car">
+            </div>
+
+            <!-- Vin Check Links -->
+            <div class="mb-3">
+                <label class="form-label">Vin Check:</label>
+                <p><a href="https://vinrcl.safercar.gov/vin/" target="_blank">VIN Check (Safercar.gov)</a></p>
+                <p><a href="https://www.nicb.org/theft_and_fraud_awareness/vincheck" target="_blank">VIN Check
+                        (NICB)</a></p>
+            </div>
+            <!-- Engine Starting Instructions -->
+            <div class="mb-3">
+                <label class="form-label">Engine (start cold, let warm up, go for a ride)</label>
+            </div>
+
+            <!-- Additional Checklist Items - Before Startup -->
+            <h2>Before Startup</h2>
+
+            <!-- Hood Pops Open Easily -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="hood-pops-open">
+                <label class="form-check-label" for="hood-pops-open">Hood Pops Open Easily?</label>
+            </div>
+
+            <!-- Hood Support/Struts Work -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="hood-support-struts">
+                <label class="form-check-label" for="hood-support-struts">Hood Support/Struts Work?</label>
+            </div>
+
+            <!-- Frame (Straight, No Kinks) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="frame-condition">
+                <label class="form-check-label" for="frame-condition">Frame (Straight, No Kinks)?</label>
+            </div>
+
+            <!-- Clean vs Dirty (Engine Detailed) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="engine-cleanliness">
+                <label class="form-check-label" for="engine-cleanliness">Clean vs Dirty (Was the engine
+                    detailed)?</label>
+            </div>
+
+            <!-- Inspect for Leaks  (oil, coolant, tranny) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="inspect-leaks">
+                <label class="form-check-label" for="inspect-leaks">Inspect for Leaks? (oil, coolant, tranny) </label>
+            </div>
+            <!-- Any Damage/New Parts -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="damage-new-parts">
+                <label class="form-check-label" for="damage-new-parts">Any Damage/New Parts?</label>
+            </div>
+            <!-- Oil Level and Oil (no metal, not frothy) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="oil-level-oil">
+                <label class="form-check-label" for="oil-level-oil">Oil Level and Oil (no metal, not frothy)?</label>
+            </div>
+
+            <!-- Oil Cap (no froth under cap) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="oil-cap-froth">
+                <label class="form-check-label" for="oil-cap-froth">Oil Cap (no froth under cap)?</label>
+            </div>
+
+            <!-- Check Coolant (make sure it's not hot when you check) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="check-coolant">
+                <label class="form-check-label" for="check-coolant">Check Coolant (make sure it's not hot when you
+                    check)?</label>
+            </div>
+
+            <!-- Inspect Hoses, Belts, Battery Posts, Wires, etc. -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="inspect-components">
+                <label class="form-check-label" for="inspect-components">Inspect Hoses, Belts, Battery Posts, Wires,
+                    etc.?</label>
+            </div>
+
+            <!-- Additional Checklist Items - Cold Startup -->
+            <h2>Cold Startup</h2>
+
+            <!-- Any Strange Noises/Smoke? -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="strange-noises-smoke">
+                <label class="form-check-label" for="strange-noises-smoke">Any Strange Noises/Smoke? (ticking, grinding,
+                    etc)</label>
+            </div>
+
+            <!-- Does It Take Too Long to Start? -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="long-start">
+                <label class="form-check-label" for="long-start">Does It Take Too Long to Start?</label>
+            </div>
+
+            <!-- Does the Motor Move a Lot (Bad Motor Mounts)? -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="motor-movement">
+                <label class="form-check-label" for="motor-movement">Does the Motor Move a Lot (Bad Motor
+                    Mounts)?</label>
+            </div>
+
+            <!-- Check Under Oil Cap (Strong Pulses/Smoke) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="oil-cap-pulses-smoke">
+                <label class="form-check-label" for="oil-cap-pulses-smoke">Check Under Oil Cap (Strong
+                    Pulses/Smoke)?</label>
+            </div>
+
+            <!-- Idle (does the idle drop and smooth out) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="idle-smooth-out">
+                <label class="form-check-label" for="idle-smooth-out">Idle (does the idle drop and smooth out)?</label>
+            </div>
+
+            <!-- Check Exhaust for Smoke Upon Startup -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exhaust-smoke">
+                <label class="form-check-label" for="exhaust-smoke">Check Exhaust for Smoke Upon Startup?</label>
+            </div>
+            <!-- New Checklist Section - Warm Startup -->
+            <h2>Warm Startup</h2>
+
+            <!-- Any Strange Noises/Smoke? -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="strange-noises-smoke-warm">
+                <label class="form-check-label" for="strange-noises-smoke-warm">Any Strange Noises/Smoke? (ticking,
+                    grinding, etc)</label>
+            </div>
+
+            <!-- Does It Take Too Long to Start? -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="long-start-warm">
+                <label class="form-check-label" for="long-start-warm">Does It Take Too Long to Start?</label>
+            </div>
+
+            <!-- Check Under Oil Cap (Strong Pulses/Smoke/Froth) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="oil-cap-pulses-smoke-froth-warm">
+                <label class="form-check-label" for="oil-cap-pulses-smoke-froth-warm">Check Under Oil Cap (Strong
+                    Pulses/Smoke/Froth)?</label>
+            </div>
+
+            <!-- Idle (does the idle drop and smooth out) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="idle-smooth-out-warm">
+                <label class="form-check-label" for="idle-smooth-out-warm">Idle (does the idle drop and smooth
+                    out)?</label>
+            </div>
+
+            <!-- Bubbling in Radiator Reservoir? (Blown Head Gasket) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="radiator-reservoir-bubbling">
+                <label class="form-check-label" for="radiator-reservoir-bubbling">Bubbling in Radiator Reservoir? (Blown
+                    Head Gasket)</label>
+            </div>
+
+            <!-- Check Exhaust for Smoke Upon Startup -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exhaust-smoke-warm">
+                <label class="form-check-label" for="exhaust-smoke-warm">Check Exhaust for Smoke Upon Startup?</label>
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
@@ -191,4 +440,5 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
