add more questions

--- a/index.html
+++ b/index.html
@@ -309,8 +309,7 @@
             <!-- Clean vs Dirty (Engine Detailed) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="engine-cleanliness">
-                <label class="form-check-label" for="engine-cleanliness">Clean vs Dirty (Was the engine
-                    detailed)?</label>
+                <label class="form-check-label" for="engine-cleanliness">Clean vs Dirty (Was the engine detailed)?</label>
             </div>
 
             <!-- Inspect for Leaks  (oil, coolant, tranny) -->
@@ -338,15 +337,13 @@
             <!-- Check Coolant (make sure it's not hot when you check) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="check-coolant">
-                <label class="form-check-label" for="check-coolant">Check Coolant (make sure it's not hot when you
-                    check)?</label>
+                <label class="form-check-label" for="check-coolant">Check Coolant (make sure it's not hot when you check)?</label>
             </div>
 
             <!-- Inspect Hoses, Belts, Battery Posts, Wires, etc. -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="inspect-components">
-                <label class="form-check-label" for="inspect-components">Inspect Hoses, Belts, Battery Posts, Wires,
-                    etc.?</label>
+                <label class="form-check-label" for="inspect-components">Inspect Hoses, Belts, Battery Posts, Wires, etc.?</label>
             </div>
 
             <!-- Additional Checklist Items - Cold Startup -->
@@ -355,8 +352,7 @@
             <!-- Any Strange Noises/Smoke? -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="strange-noises-smoke">
-                <label class="form-check-label" for="strange-noises-smoke">Any Strange Noises/Smoke? (ticking, grinding,
-                    etc)</label>
+                <label class="form-check-label" for="strange-noises-smoke">Any Strange Noises/Smoke? (ticking, grinding, etc)</label>
             </div>
 
             <!-- Does It Take Too Long to Start? -->
@@ -368,15 +364,13 @@
             <!-- Does the Motor Move a Lot (Bad Motor Mounts)? -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="motor-movement">
-                <label class="form-check-label" for="motor-movement">Does the Motor Move a Lot (Bad Motor
-                    Mounts)?</label>
+                <label class="form-check-label" for="motor-movement">Does the Motor Move a Lot (Bad Motor Mounts)?</label>
             </div>
 
             <!-- Check Under Oil Cap (Strong Pulses/Smoke) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="oil-cap-pulses-smoke">
-                <label class="form-check-label" for="oil-cap-pulses-smoke">Check Under Oil Cap (Strong
-                    Pulses/Smoke)?</label>
+                <label class="form-check-label" for="oil-cap-pulses-smoke">Check Under Oil Cap (Strong Pulses/Smoke)?</label>
             </div>
 
             <!-- Idle (does the idle drop and smooth out) -->
@@ -396,8 +390,7 @@
             <!-- Any Strange Noises/Smoke? -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="strange-noises-smoke-warm">
-                <label class="form-check-label" for="strange-noises-smoke-warm">Any Strange Noises/Smoke? (ticking,
-                    grinding, etc)</label>
+                <label class="form-check-label" for="strange-noises-smoke-warm">Any Strange Noises/Smoke? (ticking, grinding, etc)</label>
             </div>
 
             <!-- Does It Take Too Long to Start? -->
@@ -409,22 +402,19 @@
             <!-- Check Under Oil Cap (Strong Pulses/Smoke/Froth) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="oil-cap-pulses-smoke-froth-warm">
-                <label class="form-check-label" for="oil-cap-pulses-smoke-froth-warm">Check Under Oil Cap (Strong
-                    Pulses/Smoke/Froth)?</label>
+                <label class="form-check-label" for="oil-cap-pulses-smoke-froth-warm">Check Under Oil Cap (Strong Pulses/Smoke/Froth)?</label>
             </div>
 
             <!-- Idle (does the idle drop and smooth out) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="idle-smooth-out-warm">
-                <label class="form-check-label" for="idle-smooth-out-warm">Idle (does the idle drop and smooth
-                    out)?</label>
+                <label class="form-check-label" for="idle-smooth-out-warm">Idle (does the idle drop and smooth out)?</label>
             </div>
 
             <!-- Bubbling in Radiator Reservoir? (Blown Head Gasket) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="radiator-reservoir-bubbling">
-                <label class="form-check-label" for="radiator-reservoir-bubbling">Bubbling in Radiator Reservoir? (Blown
-                    Head Gasket)</label>
+                <label class="form-check-label" for="radiator-reservoir-bubbling">Bubbling in Radiator Reservoir? (Blown Head Gasket)</label>
             </div>
 
             <!-- Check Exhaust for Smoke Upon Startup -->
@@ -459,8 +449,7 @@
             <!-- Adjust Properly (Forward, Back, Tilt) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-adjust-properly">
-                <label class="form-check-label" for="interior-adjust-properly">Adjust Properly (Forward, Back,
-                    Tilt)</label>
+                <label class="form-check-label" for="interior-adjust-properly">Adjust Properly (Forward, Back, Tilt)</label>
             </div>
 
             <!-- Subtitle: Carpet -->
@@ -475,8 +464,7 @@
             <!-- Check Under Carpets (Rust, Water) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-check-under-carpets">
-                <label class="form-check-label" for="interior-check-under-carpets">Check Under Carpets (Rust,
-                    Water)</label>
+                <label class="form-check-label" for="interior-check-under-carpets">Check Under Carpets (Rust, Water)</label>
             </div>
 
             <!-- Floor Mats? -->
@@ -488,8 +476,7 @@
             <!-- Stains, Holes, Cuts, Smell, Dampness -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-carpet-conditions">
-                <label class="form-check-label" for="interior-carpet-conditions">Stains, Holes, Cuts, Smell,
-                    Dampness</label>
+                <label class="form-check-label" for="interior-carpet-conditions">Stains, Holes, Cuts, Smell, Dampness</label>
             </div>
             <!-- Subtitle: Trunk -->
             <h3>Trunk</h3>
@@ -509,8 +496,7 @@
             <!-- Spare Tire Carrier Round (No Indents) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-trunk-spare-carrier">
-                <label class="form-check-label" for="interior-trunk-spare-carrier">Spare Tire Carrier Round (No
-                    Indents)</label>
+                <label class="form-check-label" for="interior-trunk-spare-carrier">Spare Tire Carrier Round (No Indents)</label>
             </div>
 
             <!-- Lug Nut Key (Locking Lug-Nuts) -->
@@ -522,8 +508,7 @@
             <!-- Water Marks, Damp Carpet? -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-trunk-water-marks-damp-carpet">
-                <label class="form-check-label" for="interior-trunk-water-marks-damp-carpet">Water Marks, Damp
-                    Carpet?</label>
+                <label class="form-check-label" for="interior-trunk-water-marks-damp-carpet">Water Marks, Damp Carpet?</label>
             </div>
             <!-- Subtitle: Vehicle Options -->
             <h3>Vehicle Options</h3>
@@ -531,8 +516,7 @@
             <!-- Power Windows (Roll Up/Down, Scratches) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-power-windows">
-                <label class="form-check-label" for="interior-vehicle-power-windows">Power Windows (Roll Up/Down,
-                    Scratches)</label>
+                <label class="form-check-label" for="interior-vehicle-power-windows">Power Windows (Roll Up/Down, Scratches)</label>
             </div>
 
             <!-- Window Tint (Bubbles, Legal) -->
@@ -544,22 +528,19 @@
             <!-- Power Mirrors (Heat and Movement) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-power-mirrors">
-                <label class="form-check-label" for="interior-vehicle-power-mirrors">Power Mirrors (Heat and
-                    Movement)</label>
+                <label class="form-check-label" for="interior-vehicle-power-mirrors">Power Mirrors (Heat and Movement)</label>
             </div>
 
             <!-- Power Locks (All Doors Lock/Unlock) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-power-locks">
-                <label class="form-check-label" for="interior-vehicle-power-locks">Power Locks (All Doors
-                    Lock/Unlock)</label>
+                <label class="form-check-label" for="interior-vehicle-power-locks">Power Locks (All Doors Lock/Unlock)</label>
             </div>
 
             <!-- Radio (AM/FM/Clock Set Right, Speakers Work) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-radio">
-                <label class="form-check-label" for="interior-vehicle-radio">Radio (AM/FM/Clock Set Right, Speakers
-                    Work)</label>
+                <label class="form-check-label" for="interior-vehicle-radio">Radio (AM/FM/Clock Set Right, Speakers Work)</label>
             </div>
 
             <!-- AC/Heat (All Settings, All Vents) -->
@@ -571,8 +552,7 @@
             <!-- Navigation (Make Sure It Locates) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-navigation">
-                <label class="form-check-label" for="interior-vehicle-navigation">Navigation (Make Sure It
-                    Locates)</label>
+                <label class="form-check-label" for="interior-vehicle-navigation">Navigation (Make Sure It Locates)</label>
             </div>
 
             <!-- Sunroof (Opens/Closes, No Leaks) -->
@@ -584,29 +564,25 @@
             <!-- Rear View Mirror (Auto-Dim) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-rear-view-mirror">
-                <label class="form-check-label" for="interior-vehicle-rear-view-mirror">Rear View Mirror
-                    (Auto-Dim)</label>
+                <label class="form-check-label" for="interior-vehicle-rear-view-mirror">Rear View Mirror (Auto-Dim)</label>
             </div>
 
             <!-- Parking Sensors (Beep in Reverse) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-parking-sensors">
-                <label class="form-check-label" for="interior-vehicle-parking-sensors">Parking Sensors (Beep in
-                    Reverse)</label>
+                <label class="form-check-label" for="interior-vehicle-parking-sensors">Parking Sensors (Beep in Reverse)</label>
             </div>
 
             <!-- Lights (Glove Box, Map, Dashboard, etc) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-lights">
-                <label class="form-check-label" for="interior-vehicle-lights">Lights (Glove Box, Map, Dashboard,
-                    etc)</label>
+                <label class="form-check-label" for="interior-vehicle-lights">Lights (Glove Box, Map, Dashboard, etc)</label>
             </div>
 
             <!-- Emergency Brake Holds Car in Neutral -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-emergency-brake">
-                <label class="form-check-label" for="interior-vehicle-emergency-brake">Emergency Brake Holds Car in
-                    Neutral</label>
+                <label class="form-check-label" for="interior-vehicle-emergency-brake">Emergency Brake Holds Car in Neutral</label>
             </div>
 
             <!-- Heated Seats -->
