add more questions

--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
 
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="suspension">
-                <label class="form-check-label" for="suspension">Suspension (tie rods, ball joints, shocks, axle,
-                    etc)</label>
+                <label class="form-check-label" for="suspension">Suspension (tie rods, ball joints, shocks, axle, etc)</label>
             </div>
 
             <div class="mb-3 form-check">
