--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
 
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="suspension">
-                <label class="form-check-label" for="suspension">Suspension (tie rods, ball joints, shocks, axle, etc)</label>
+                <label class="form-check-label" for="suspension">Suspension (tie rods, ball joints, shocks, axle,
+                    etc)</label>
             </div>
 
             <div class="mb-3 form-check">
@@ -308,7 +309,8 @@
             <!-- Clean vs Dirty (Engine Detailed) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="engine-cleanliness">
-                <label class="form-check-label" for="engine-cleanliness">Clean vs Dirty (Was the engine detailed)?</label>
+                <label class="form-check-label" for="engine-cleanliness">Clean vs Dirty (Was the engine
+                    detailed)?</label>
             </div>
 
             <!-- Inspect for Leaks  (oil, coolant, tranny) -->
@@ -336,13 +338,15 @@
             <!-- Check Coolant (make sure it's not hot when you check) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="check-coolant">
-                <label class="form-check-label" for="check-coolant">Check Coolant (make sure it's not hot when you check)?</label>
+                <label class="form-check-label" for="check-coolant">Check Coolant (make sure it's not hot when you
+                    check)?</label>
             </div>
 
             <!-- Inspect Hoses, Belts, Battery Posts, Wires, etc. -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="inspect-components">
-                <label class="form-check-label" for="inspect-components">Inspect Hoses, Belts, Battery Posts, Wires, etc.?</label>
+                <label class="form-check-label" for="inspect-components">Inspect Hoses, Belts, Battery Posts, Wires,
+                    etc.?</label>
             </div>
 
             <!-- Additional Checklist Items - Cold Startup -->
@@ -351,7 +355,8 @@
             <!-- Any Strange Noises/Smoke? -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="strange-noises-smoke">
-                <label class="form-check-label" for="strange-noises-smoke">Any Strange Noises/Smoke? (ticking, grinding, etc)</label>
+                <label class="form-check-label" for="strange-noises-smoke">Any Strange Noises/Smoke? (ticking, grinding,
+                    etc)</label>
             </div>
 
             <!-- Does It Take Too Long to Start? -->
@@ -363,13 +368,15 @@
             <!-- Does the Motor Move a Lot (Bad Motor Mounts)? -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="motor-movement">
-                <label class="form-check-label" for="motor-movement">Does the Motor Move a Lot (Bad Motor Mounts)?</label>
+                <label class="form-check-label" for="motor-movement">Does the Motor Move a Lot (Bad Motor
+                    Mounts)?</label>
             </div>
 
             <!-- Check Under Oil Cap (Strong Pulses/Smoke) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="oil-cap-pulses-smoke">
-                <label class="form-check-label" for="oil-cap-pulses-smoke">Check Under Oil Cap (Strong Pulses/Smoke)?</label>
+                <label class="form-check-label" for="oil-cap-pulses-smoke">Check Under Oil Cap (Strong
+                    Pulses/Smoke)?</label>
             </div>
 
             <!-- Idle (does the idle drop and smooth out) -->
@@ -389,7 +396,8 @@
             <!-- Any Strange Noises/Smoke? -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="strange-noises-smoke-warm">
-                <label class="form-check-label" for="strange-noises-smoke-warm">Any Strange Noises/Smoke? (ticking, grinding, etc)</label>
+                <label class="form-check-label" for="strange-noises-smoke-warm">Any Strange Noises/Smoke? (ticking,
+                    grinding, etc)</label>
             </div>
 
             <!-- Does It Take Too Long to Start? -->
@@ -401,19 +409,22 @@
             <!-- Check Under Oil Cap (Strong Pulses/Smoke/Froth) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="oil-cap-pulses-smoke-froth-warm">
-                <label class="form-check-label" for="oil-cap-pulses-smoke-froth-warm">Check Under Oil Cap (Strong Pulses/Smoke/Froth)?</label>
+                <label class="form-check-label" for="oil-cap-pulses-smoke-froth-warm">Check Under Oil Cap (Strong
+                    Pulses/Smoke/Froth)?</label>
             </div>
 
             <!-- Idle (does the idle drop and smooth out) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="idle-smooth-out-warm">
-                <label class="form-check-label" for="idle-smooth-out-warm">Idle (does the idle drop and smooth out)?</label>
+                <label class="form-check-label" for="idle-smooth-out-warm">Idle (does the idle drop and smooth
+                    out)?</label>
             </div>
 
             <!-- Bubbling in Radiator Reservoir? (Blown Head Gasket) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="radiator-reservoir-bubbling">
-                <label class="form-check-label" for="radiator-reservoir-bubbling">Bubbling in Radiator Reservoir? (Blown Head Gasket)</label>
+                <label class="form-check-label" for="radiator-reservoir-bubbling">Bubbling in Radiator Reservoir? (Blown
+                    Head Gasket)</label>
             </div>
 
             <!-- Check Exhaust for Smoke Upon Startup -->
@@ -448,7 +459,8 @@
             <!-- Adjust Properly (Forward, Back, Tilt) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-adjust-properly">
-                <label class="form-check-label" for="interior-adjust-properly">Adjust Properly (Forward, Back, Tilt)</label>
+                <label class="form-check-label" for="interior-adjust-properly">Adjust Properly (Forward, Back,
+                    Tilt)</label>
             </div>
 
             <!-- Subtitle: Carpet -->
@@ -463,7 +475,8 @@
             <!-- Check Under Carpets (Rust, Water) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-check-under-carpets">
-                <label class="form-check-label" for="interior-check-under-carpets">Check Under Carpets (Rust, Water)</label>
+                <label class="form-check-label" for="interior-check-under-carpets">Check Under Carpets (Rust,
+                    Water)</label>
             </div>
 
             <!-- Floor Mats? -->
@@ -475,7 +488,8 @@
             <!-- Stains, Holes, Cuts, Smell, Dampness -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-carpet-conditions">
-                <label class="form-check-label" for="interior-carpet-conditions">Stains, Holes, Cuts, Smell, Dampness</label>
+                <label class="form-check-label" for="interior-carpet-conditions">Stains, Holes, Cuts, Smell,
+                    Dampness</label>
             </div>
             <!-- Subtitle: Trunk -->
             <h3>Trunk</h3>
@@ -495,7 +509,8 @@
             <!-- Spare Tire Carrier Round (No Indents) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-trunk-spare-carrier">
-                <label class="form-check-label" for="interior-trunk-spare-carrier">Spare Tire Carrier Round (No Indents)</label>
+                <label class="form-check-label" for="interior-trunk-spare-carrier">Spare Tire Carrier Round (No
+                    Indents)</label>
             </div>
 
             <!-- Lug Nut Key (Locking Lug-Nuts) -->
@@ -507,7 +522,8 @@
             <!-- Water Marks, Damp Carpet? -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-trunk-water-marks-damp-carpet">
-                <label class="form-check-label" for="interior-trunk-water-marks-damp-carpet">Water Marks, Damp Carpet?</label>
+                <label class="form-check-label" for="interior-trunk-water-marks-damp-carpet">Water Marks, Damp
+                    Carpet?</label>
             </div>
             <!-- Subtitle: Vehicle Options -->
             <h3>Vehicle Options</h3>
@@ -515,7 +531,8 @@
             <!-- Power Windows (Roll Up/Down, Scratches) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-power-windows">
-                <label class="form-check-label" for="interior-vehicle-power-windows">Power Windows (Roll Up/Down, Scratches)</label>
+                <label class="form-check-label" for="interior-vehicle-power-windows">Power Windows (Roll Up/Down,
+                    Scratches)</label>
             </div>
 
             <!-- Window Tint (Bubbles, Legal) -->
@@ -527,19 +544,22 @@
             <!-- Power Mirrors (Heat and Movement) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-power-mirrors">
-                <label class="form-check-label" for="interior-vehicle-power-mirrors">Power Mirrors (Heat and Movement)</label>
+                <label class="form-check-label" for="interior-vehicle-power-mirrors">Power Mirrors (Heat and
+                    Movement)</label>
             </div>
 
             <!-- Power Locks (All Doors Lock/Unlock) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-power-locks">
-                <label class="form-check-label" for="interior-vehicle-power-locks">Power Locks (All Doors Lock/Unlock)</label>
+                <label class="form-check-label" for="interior-vehicle-power-locks">Power Locks (All Doors
+                    Lock/Unlock)</label>
             </div>
 
             <!-- Radio (AM/FM/Clock Set Right, Speakers Work) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-radio">
-                <label class="form-check-label" for="interior-vehicle-radio">Radio (AM/FM/Clock Set Right, Speakers Work)</label>
+                <label class="form-check-label" for="interior-vehicle-radio">Radio (AM/FM/Clock Set Right, Speakers
+                    Work)</label>
             </div>
 
             <!-- AC/Heat (All Settings, All Vents) -->
@@ -551,7 +571,8 @@
             <!-- Navigation (Make Sure It Locates) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-navigation">
-                <label class="form-check-label" for="interior-vehicle-navigation">Navigation (Make Sure It Locates)</label>
+                <label class="form-check-label" for="interior-vehicle-navigation">Navigation (Make Sure It
+                    Locates)</label>
             </div>
 
             <!-- Sunroof (Opens/Closes, No Leaks) -->
@@ -563,25 +584,29 @@
             <!-- Rear View Mirror (Auto-Dim) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-rear-view-mirror">
-                <label class="form-check-label" for="interior-vehicle-rear-view-mirror">Rear View Mirror (Auto-Dim)</label>
+                <label class="form-check-label" for="interior-vehicle-rear-view-mirror">Rear View Mirror
+                    (Auto-Dim)</label>
             </div>
 
             <!-- Parking Sensors (Beep in Reverse) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-parking-sensors">
-                <label class="form-check-label" for="interior-vehicle-parking-sensors">Parking Sensors (Beep in Reverse)</label>
+                <label class="form-check-label" for="interior-vehicle-parking-sensors">Parking Sensors (Beep in
+                    Reverse)</label>
             </div>
 
             <!-- Lights (Glove Box, Map, Dashboard, etc) -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-lights">
-                <label class="form-check-label" for="interior-vehicle-lights">Lights (Glove Box, Map, Dashboard, etc)</label>
+                <label class="form-check-label" for="interior-vehicle-lights">Lights (Glove Box, Map, Dashboard,
+                    etc)</label>
             </div>
 
             <!-- Emergency Brake Holds Car in Neutral -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="interior-vehicle-emergency-brake">
-                <label class="form-check-label" for="interior-vehicle-emergency-brake">Emergency Brake Holds Car in Neutral</label>
+                <label class="form-check-label" for="interior-vehicle-emergency-brake">Emergency Brake Holds Car in
+                    Neutral</label>
             </div>
 
             <!-- Heated Seats -->
@@ -631,11 +656,108 @@
                 <input type="checkbox" class="form-check-input" id="interior-seats-carpet">
                 <label class="form-check-label" for="interior-seats-carpet">Seats/Carpet</label>
             </div>
+            <!-- New Checklist Section - Exterior -->
+            <h2>Exterior</h2>
+
+            <!-- Subtitle: Lights -->
+            <h3>Lights</h3>
+
+            <!-- High/Low Beams -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-lights-high-low-beams">
+                <label class="form-check-label" for="exterior-lights-high-low-beams">High/Low Beams</label>
+            </div>
+
+            <!-- Front Running Lights -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-lights-front-running-lights">
+                <label class="form-check-label" for="exterior-lights-front-running-lights">Front Running Lights</label>
+            </div>
+
+            <!-- Front Fog Lights -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-lights-front-fog-lights">
+                <label class="form-check-label" for="exterior-lights-front-fog-lights">Front Fog Lights</label>
+            </div>
+
+            <!-- Front Turn Signals -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-lights-front-turn-signals">
+                <label class="form-check-label" for="exterior-lights-front-turn-signals">Front Turn Signals</label>
+            </div>
+
+            <!-- Brake Running Lights -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-lights-brake-running-lights">
+                <label class="form-check-label" for="exterior-lights-brake-running-lights">Brake Running Lights</label>
+            </div>
+
+            <!-- Pressed Brake Lights (3rd Brake Light) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-lights-pressed-brake-lights">
+                <label class="form-check-label" for="exterior-lights-pressed-brake-lights">Pressed Brake Lights (3rd
+                    Brake Light)</label>
+            </div>
+
+            <!-- Rear Turn Signals -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-lights-rear-turn-signals">
+                <label class="form-check-label" for="exterior-lights-rear-turn-signals">Rear Turn Signals</label>
+            </div>
+
+            <!-- Rear Fog Lights -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-lights-rear-fog-lights">
+                <label class="form-check-label" for="exterior-lights-rear-fog-lights">Rear Fog Lights</label>
+            </div>
+            <!-- Subtitle: Bodywork -->
+            <h3>Bodywork</h3>
+
+            <!-- Panel Gaps -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-bodywork-panel-gaps">
+                <label class="form-check-label" for="exterior-bodywork-panel-gaps">Panel Gaps</label>
+            </div>
+
+            <!-- Paint Seams on Edge of Panels -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-bodywork-paint-seams">
+                <label class="form-check-label" for="exterior-bodywork-paint-seams">Paint Seams on Edge of
+                    Panels</label>
+            </div>
+
+            <!-- Bondo (Magnet and Tapping Methods) -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-bodywork-bondo">
+                <label class="form-check-label" for="exterior-bodywork-bondo">Bondo (Magnet and Tapping Methods)</label>
+            </div>
+            <!-- Subtitle: Tires -->
+            <h3>Tires</h3>
+
+            <!-- Turn Lock to Lock -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-tires-turn-lock-to-lock">
+                <label class="form-check-label" for="exterior-tires-turn-lock-to-lock">Turn Lock to Lock</label>
+            </div>
+
+            <!-- Inspect Tread-Wear -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-tires-inspect-tread-wear">
+                <label class="form-check-label" for="exterior-tires-inspect-tread-wear">Inspect Tread-Wear</label>
+            </div>
+
+            <!-- Inspect Camber/Toe Angle -->
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exterior-tires-inspect-camber-toe-angle">
+                <label class="form-check-label" for="exterior-tires-inspect-camber-toe-angle">Inspect Camber/Toe
+                    Angle</label>
+            </div>
 
 
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
+
 
     <!-- Include Bootstrap JavaScript and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
