add more questions

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <h1 class="text-center">Drive with Confidence - Our Comprehensive Car Inspection Services</h1>
-                <p class="text-center">Is that dream car you're eyeing worth the investment? Don't take chances. At [Your Company Name], we've got your back with thorough car inspections that leave no stone unturned.</p>
+                <p class="text-center">Is that dream car you're eyeing worth the investment? Don't take chances. At 01, we've got your back with thorough car inspections that leave no stone unturned.</p>
 
                 <h2>Our Services:</h2>
                 <ul>
@@ -89,7 +89,7 @@
                     <!-- Add more services as needed -->
                 </ul>
 
-                <h2>Why Choose [Your Company Name] for Your Car Inspection?</h2>
+                <h2>Why Choose 01 for Your Car Inspection?</h2>
                 <ul>
                     <li>Experienced Automotive Experts</li>
                     <li>Cutting-Edge Diagnostic Tools</li>
