--- a/test_drive.html
+++ b/test_drive.html
@@ -65,10 +65,10 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="basic-checklist.html">Basic Checklist</a>
+                        <a class="nav-link" href="basic_checklist.html">Basic Checklist</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="test-drive.html">Test Drive</a>
+                        <a class="nav-link" href="test_drive.html">Test Drive</a>
                     </li>
                 </ul>
             </div>
