--- a/test_drive.html
+++ b/test_drive.html
@@ -56,7 +56,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Car Inspection</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -65,15 +65,16 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="basic_checklist.html">Basic Checklist</a>
+                        <a class="nav-link" href="https://milos.oroz.space/autocheckpro/basic_checklist.html">Basic Checklist</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="test_drive.html">Test Drive</a>
+                        <a class="nav-link" href="https://milos.oroz.space/autocheckpro/test_drive.html">Test Drive</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    
     <div class="container">
 
             <!-- Additional Checklist Items - Questions for the Owner -->
@@ -762,6 +763,8 @@
     <!-- Include Bootstrap JavaScript and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
