add more questions

--- a/test_drive.html
+++ b/test_drive.html
@@ -57,12 +57,16 @@
             z-index: 1000; /* Adjust the z-index as needed */
         }
         /* Custom styles for  */
+        [type="checkbox"]
+        {
+            vertical-align:middle;
+        }
 
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-to">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">Car Inspection</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,7 +91,7 @@
     <div class="container">
 
             <!-- Additional Checklist Items - Questions for the Owner -->
-            <h2>How to Inspect a Used Car Checklist: The Test Drive</h2>
+            <h1 class="mt-5 text-center">How to Inspect a Used Car Checklist: The Test Drive</h1>
             <h2>Questions for the Owner</h2>
 
             <!-- Question 1: How long have you owned the car? -->
