--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             }
     
             .container {
-                background-color: #ffffff;
                 padding: 20px;
                 border-radius: 5px;
             }
@@ -166,8 +165,8 @@
         </div>
     </section>
 
-    <!-- Footer Section -->
-<footer class="bg-dark text-light mt-5">
+<!-- Footer Section with Blue Background -->
+<footer class="bg-primary text-light mt-5">
     <div class="container py-4">
         <div class="row">
             <div class="col-md-4">
@@ -201,6 +200,7 @@
         </div>
     </div>
 </footer>
+
 
     
     <!-- Add Bootstrap JS CDN (optional) -->
