add more questions

--- a/basic_checklist.html
+++ b/basic_checklist.html
@@ -56,6 +56,9 @@
             top: 0;
             z-index: 1000; /* Adjust the z-index as needed */
         }
+        .form-check-input {
+        margin-right: 0px !important;
+        }
     </style>
 </head>
 
