--- a/test_drive.html
+++ b/test_drive.html
@@ -57,9 +57,8 @@
             z-index: 1000; /* Adjust the z-index as needed */
         }
         /* Custom styles for  */
-        [type="checkbox"]
-        {
-            vertical-align:middle;
+        .form-check-input {
+        margin-right: 0px !important;
         }
 
     </style>
