add export to pdf

--- a/basic_checklist.html
+++ b/basic_checklist.html
@@ -192,8 +192,9 @@
 
             <div id="review-section">
                 <h3>Checklist information review:</h3>
-                <p id="checked-count">0/18</p>
-
+                <div>How many items you checked: <span id="checked-count">0/18</span></div>
+                
+                <p>Comments you added:</p>
                 <div class="review-text"></div>
             </div>
 
