--- a/navi.html
+++ b/navi.html
@@ -12,11 +12,11 @@
                     <a class="nav-link" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/basic_checklist.html">Basic
+                    <a class="nav-link" href="/pages/basic_checklist.html">Basic
                         Checklist</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/test_drive.html">Test Drive
+                    <a class="nav-link" href="/pages/test_drive.html">Test Drive
                         Checklist</a>
                 </li>
 
