--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- Add Bootstrap CSS CDN -->
     
         <!-- Custom CSS Styles -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
