--- a/pages/basic_checklist.html
+++ b/pages/basic_checklist.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <!-- Custom CSS Styles -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -210,9 +210,13 @@
             <button type="button" class="btn btn-primary" id="exportPdfButton">Export to PDF</button>
         </div>
     </section>
+    <script>
+        $(document).ready(function () {
+            $("#navbar").load("/navi.html");
+        });
+    </script>
 
-
-    <script src="basic.js"></script>
+    <script src="js/basic.js"></script>
 
     <!-- Include Bootstrap JavaScript and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
